<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">cheque_manager</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="add_entry">Add Entry</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_home">Home</string>
    <string name="all">All</string>
    <string name="tv_value">Value:</string>
    <string name="tv_category">Category:</string>
    <string name="tv_date">Date:</string>
    <string name="tv_isDone">Finished</string>
    <string name="btn_save">Save</string>
    <string name="title_activity_create_entry2">Entry</string>
    <string name="hello_world">Hello world!</string>
    <string name="confirm_create_entry">Create an Entry?</string>
    <string name="yes">Yes</string>
    <string name="home">Home</string>
    <string name="empty_fields">Fields are Empty!</string>
    <string name="tv_create_description">Description:</string>
    <string name="optional">Optional</string>
    <string name="filters">Filters:</string>

</resources>
